[project]
name = "research-trading-platform"
version = "0.1.0"
description = "A modular quantitative trading strategy backtester and research platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]